--- a/libs/libvorbisidec/Makefile
+++ b/libs/libvorbisidec/Makefile
@@ -12,11 +12,9 @@ PKG_REV:=20150104
 PKG_VERSION:=1.0.3-$(PKG_REV)
 PKG_RELEASE:=1
 
-PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://git.xiph.org/tremor.git
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=b56ffce0c0773ec5ca04c466bc00b1bbcaf65aef
+PKG_SOURCE_URL:=http://entware.dyndns.info/sources/
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_MD5SUM:=945c512cee4798f7a51adb0673f5b3f8
 
 PKG_MAINTAINER:=Ted Hess <thess@kitschensync.net>
 
